cabal-version:       3.0

name:                adventofcode
version:             0.1.0.0
description:         My solutions for the Advent Of Code 2020 challenge written in Haskell
bug-reports:         https://github.com/Scriptim/AdventOfCode2020/issues
license:             MIT
license-file:        LICENSE
author:              Scriptim
maintainer:          Scriptim@gmx.de
extra-source-files:  README.md

executable adventofcode
  main-is:             Main.hs
  build-depends:       base ^>=4.14.1.0
  default-language:    Haskell2010

executable report-repair
  main-is:             main.hs
  hs-source-dirs:      01-report_repair
  build-depends:       base ^>=4.14.1.0
  default-language:    Haskell2010

executable password-philosophy
  main-is:             main.hs
  hs-source-dirs:      02-password_philosophy
  build-depends:       base ^>=4.14.1.0, split ^>=0.2.3.4
  default-language:    Haskell2010

executable toboggan-trajectory
  main-is:             main.hs
  hs-source-dirs:      03-toboggan_trajectory
  build-depends:       base ^>=4.14.1.0
  default-language:    Haskell2010

executable passport-processing
  main-is:             main.hs
  hs-source-dirs:      04-passport_processing
  build-depends:       base ^>=4.14.1.0, split ^>=0.2.3.4
  default-language:    Haskell2010

executable binary-boarding
  main-is:             main.hs
  hs-source-dirs:      05-binary_boarding
  build-depends:       base ^>=4.14.1.0
  default-language:    Haskell2010

executable custom-customs
  main-is:             main.hs
  hs-source-dirs:      06-custom_customs
  build-depends:       base ^>=4.14.1.0, split ^>=0.2.3.4
  default-language:    Haskell2010

executable handy-haversacks
  main-is:             main.hs
  hs-source-dirs:      07-handy_haversacks
  build-depends:       base ^>=4.14.1.0, containers ^>=0.6.2.1
  default-language:    Haskell2010

executable handheld-halting
  main-is:             main.hs
  hs-source-dirs:      08-handheld_halting
  build-depends:       base ^>=4.14.1.0
  default-language:    Haskell2010
